added RoR Build from phusion passenger

--- a/RoR/Dockerfile
+++ b/RoR/Dockerfile
@@ -1,26 +1,41 @@
-#Docker image file for Ruby-on-Rails Web Development
-FROM ubuntu
-MAINTAINER pggsx
+# Docker RoR Build taken from phusion Passenger docker-passenger
 
-ENV DEBIAN_FRONTEND noninteractive
+# a list of version numbers.
+#FROM phusion/passenger-full:<VERSION>
+# Or, instead of the 'full' variant, use one of these:
+#FROM phusion/passenger-ruby19:<VERSION>
+#FROM phusion/passenger-ruby20:<VERSION>
+#FROM phusion/passenger-ruby21:<VERSION>
+FROM phusion/passenger-ruby22:0.9.17
+#FROM phusion/passenger-jruby90:<VERSION>
+#FROM phusion/passenger-nodejs:<VERSION>
+#FROM phusion/passenger-customizable:<VERSION>
 
-run useradd deploy
-run adduser deploy sudo
-run  echo "deb https://oss-binaries.phusionpassenger.com/apt/passenger trusty main" > /etc/apt/sources.list.d/passenger.list
-run apt-get install -y apt-transport-https
-run apt-get -y update && apt-get -y upgrade
-run apt-get install -y --force-yes vim wget curl tmux zsh build-essential git mercurial subversion nginx nginx-extras passenger
-run apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 561F9B9CAC40B2F7
-run gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
+# Set correct environment variables.
+ENV HOME /root
 
-run curl -sSL https://get.rvm.io | bash -s stable --ruby 
-run curl -sSL https://get.rvm.io | bash -s stable --rails
-#insert git clone of RoR CMS
-run echo "insert git clone here"
-run bin/bash -c "source /usr/local/rvm/scripts/rvm"
-run echo "running Passenger config script"
-run sed -i "/#passenger_/s/#//g" /etc/nginx/nginx.conf
-#enable passenger configs for ruby and nginxrun sed -i "15/.*/ \t $(passenger-config --root)/g" /etc/nginx/nginx.conf
-run sed -i "15s/.*/ \t $(passenger-config --root)/g" /etc/nginx/nginx.conf
-run echo "config script complete"
-run echo "build complete"
+# Use baseimage-docker's init process.
+CMD ["/sbin/my_init"]
+
+# If you're using the 'customizable' variant, you need to explicitly opt-in
+# for features. Uncomment the features you want:
+#
+#   Build system and git.
+#RUN /pd_build/utilities.sh
+#   Ruby support.
+#RUN /pd_build/ruby1.9.sh
+#RUN /pd_build/ruby2.0.sh
+#RUN /pd_build/ruby2.1.sh
+#RUN /pd_build/ruby2.2.sh
+#RUN /pd_build/jruby9.0.sh
+#   Python support.
+#RUN /pd_build/python.sh
+#   Node.js and Meteor support.
+#RUN /pd_build/nodejs.sh
+
+# ...put your own build instructions here...
+#enable Nginx and Passenger Support
+RUN rm -f /etc/service/nginx/down
+# Clean up APT when done.
+
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
