--- a/phpdev/Dockerfile
+++ b/phpdev/Dockerfile
@@ -1,4 +1,4 @@
-#Appsec Docker Container to practice and test Appsec related skills
+#Docker Debian template
 FROM debian
 MAINTAINER pggsx
 
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND noninteractive
 run adduser deploy
 run useradd -g deploy sudo
 run apt-get -y update && apt-get -y upgrade
-run apt-get	install -y nginx php5-mysql mysql-server
+run apt-get install -y php5-mysql nginx mysql-server
 #insert project build
 run echo "insert git clone here"
 run echo "build complete"
