--- a/docker-templates/Redhat/Dockerfile
+++ b/docker-templates/Redhat/Dockerfile
@@ -4,7 +4,9 @@ MAINTAINER pggsx
 
 ENV DEBIAN_FRONTEND noninteractive
 
-run useradd deploy
+run adduser --disabled-password --gecos '' deploy
 run adduser -g deploy sudo
 run yum -y update && yum -y upgrade
+run apt-get -y install vim git mercurial tmux
 run echo "build complete"
+
