--- a/docker-templates/Generic/PHP/Dockerfile
+++ b/docker-templates/Generic/PHP/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER pggsx
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN adduser --disabled-password --gecos '' deploy
-run useradd -g deploy sudo
+run usermod -aG sudo deploy
 run apt-get -y update && apt-get -y upgrade
 run apt-get install -y vim sudo git mercurial tmux php5-mysql nginx mysql-server
 #insert project build
