--- a/docker-templates/Redhat/Dockerfile
+++ b/docker-templates/Redhat/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER pggsx
 ENV DEBIAN_FRONTEND noninteractive
 
 run adduser --disabled-password --gecos '' deploy
-run adduser -g deploy sudo
+run usermod -aG sudo deploy
 run yum -y update && yum -y upgrade
 run apt-get -y install vim git mercurial tmux
 run echo "build complete"
