--- a/automation/vagrant/docker_prov/Vagrantfile
+++ b/automation/vagrant/docker_prov/Vagrantfile
@@ -1,3 +1,4 @@
+ENV['VAGRANT_DEFAULT_PROVIDER'] = 'docker'
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
@@ -68,4 +69,14 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
   # SHELL
+	config.vm.box_check_update = false
+	Vagrant.configure("2") do |config|
+	config.vm.provision "docker" do |d|
+		config.vm.synced_folder "looper/","/home/vagrant/"
+		d.build_image "/looper/Generic/Web/Dockerfile",args:" -f -t pggsx:test1"
+	
+		d.run "pggsx:test1"
+	end	
 end
+end
+
