--- a/docker-templates/Redhat/Dockerfile
+++ b/docker-templates/Redhat/Dockerfile
@@ -4,9 +4,9 @@ MAINTAINER pggsx
 
 ENV DEBIAN_FRONTEND noninteractive
 
-run adduser --disabled-password --gecos '' deploy
-run usermod -aG sudo deploy
 run yum -y update && yum -y upgrade
-run apt-get -y install vim git mercurial tmux
+run useradd deploy
+run yum -y install sudo
+run yum -y install vim git mercurial tmux
 run echo "build complete"
 
